--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
         </head>
         <body>
             <div id="root">
-                
+                <h2>Emails</h2>
+                <ul>
+                    <li>{{emails}}</li>
+                </ul>
             </div>
 
+            <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
             <script src="Js/main.js"></script>
         </body>
