--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-    <html lang="en">
+<html lang="en">
 
-        <head>
-            <meta charset="UTF-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Email list</title>
-        </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Email list</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
-        <body>
-            <div id="root">
-                <h2>Emails</h2>
-                <ul>
-                    <li v-for="(item, index) in emails" :key="index">{{emails[index]}}</li>
-                </ul>
-            </div>
+<body>
+    <div id="root">
+        <div class="container">
+            <h2>Emails</h2>
+            <ul>
+                <li v-for="(item, index) in emails" :key="index">{{item}}</li>
+            </ul>
+        </div>
+    </div>
 
-            <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-            <script src="Js/main.js"></script>
-        </body>
-        
-    </html>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="js/main.js"></script>
+</body>
+
+</html>
